force-app/main/default/objects/Shipment_Forecast__c/Shipment_Forecast__c.object-meta.xml
<CustomObject>
    <label>Shipment Forecast</label>
    <nameField>
        <displayFormat>SF-{0}</displayFormat>
        <label>Shipment Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>