force-app/main/default/objects/Shipment_Forecast__c/fields/Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Schedule__c</fullName>
    <label>Delivery Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>24 months</fullName>
            </value>
            <value>
                <fullName>36 months</fullName>
            </value>
            <value>
                <fullName>within Initial Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>