force-app/main/default/objects/Shipment_Forecast__c/fields/Oracle_Sales_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Sales_Order_ID__c</fullName>
    <description>ID of the Oracle Sales Order that this shipment is associated with</description>
    <label>Oracle Sales Order ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>