force-app/main/default/objects/Shipment_Forecast__c/fields/Quote_Product__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product__c</fullName>
    <label>Quote Product</label>
    <referenceTo>VCG_CPQ_Quote_Product__c</referenceTo>
    <relationshipLabel>Shipment Forecasts</relationshipLabel>
    <relationshipName>Shipment_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>