force-app/main/default/objects/Shipment_Forecast__c/fields/Shipment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Quantity__c</fullName>
    <label>Shipment Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>